# DopplerFi

./: README.md
code/MATLAB/: fft_length.m
code/MATLAB/CSI/: BLE2WiFi_decode.m  (+4 more)
code/grc/: GMSK_receiver.grc  detect_ble.grc  gmsk_loopback.grc  grc_tx_ofdm.grc  ofdmTx.grc
code/grc/gr-RSSI/lib/: CMakeLists.txt  ctc_decode_bb_impl.h  my_RSSI_ccf_impl.cc~  qa_RSSI.cc  qa_RSSI.h  qa_ctc_decode_bb.h  qa_my_RSSI_ccf.cc  test_RSSI.cc
evaluation_figure/exp_eps/: 1_throughput_ble_wifi_freq.eps  2_1_ber_ble_freq.eps  2_2_throughput_ble_freq.eps  2_3_BER_wifi_freq.eps  2_4_throughput_wifi_freq.eps  3_1_ber_distance_wifi.eps  3_3_throughput_distance_wifi_transparent.eps  4_1_ber_channel.eps  4_2_throughput_channel_continuous.eps  5_2_throughput_power_transparent.eps
evaluation_figure/exp_fig/: 1_throughput_ble_wifi_freq.fig  2_3_BER_wifi_freq.fig  2_4_throughput_wifi_freq.fig  3_3_throughput_distance_ble_transparent.fig  4_1_ber_channel.fig  4_2_throughput_channel_continuous.fig  5_2_throughput_power_transparent.fig
evaluation_figure/figures/: 0_ble_wifi_freq.fig  1_ber_DopplerFi_ble_freq.fig  2_1_ber_distance_ble.fig  2_1_throughput_freq_transparant.fig  2_2_ber_distance_wifi.fig  3_1_throughput_distance_wifi_continuous.fig  3_2_throughput_distance_ble_continuous.fig  3_3_throughput_distance_ble_transparant.fig  3_4_throughput_distance(wifi)_transparant.fig  4_1_ber_channel.fig  4_1_ber_freq.fig  4_3_throughput_channel_transparant.fig  5_1_ber_power.fig  5_2_throughput_power_continuous.fig  5_2_throughput_power_transparant.fig  ber_channel.fig  ber_distance(ble).fig  ber_distance(wifi).fig  ber_power.fig  ble&wifi_freq.fig  ble0727_diff.xlsx  ble_ble_freq.fig  plotfig.m  plotprr.m  plotprr2.m  throughput_channel_continuous.fig  throughput_channel_transparant.fig  throughput_distance(ble)_continuous.fig  throughput_distance(wifi)_continuous.fig  throughput_distance_ble_transparant.fig  throughput_freq_continuous.fig  throughput_freq_transparant.fig  throughput_power_continuous.fig
evaluation_figure/huatu/: CTC.xlsx  ber_channel.fig  ber_distance(ble).fig  ber_distance(wifi).fig  ber_freq.fig  ber_power.fig  ble&wifi_freq.fig  ble0727.xlsx  ble_ble_freq.fig  ble_pic.rar  hsy_freq.m  m_power.m  mwarp.m  mwarp2.m  plotprr.m  power.xlsx  power0728.xlsx  throughput_channel_continuous.fig  throughput_channel_transparant.fig  throughput_distance(ble)_continuous.fig  throughput_distance(ble)_transparant.fig  throughput_distance(wifi)_theory.fig  throughput_distance(wifi)_transparant.fig  throughput_distance(wifi)_transparant_errorbar.fig  throughput_freq_continuous.fig  throughput_freq_transparant.fig  throughput_power_theory.fig  ubertooth.m  ubertooth2.m  warp.xlsx  warp0727.xlsx  warp0727_plot.xlsx  warp_1.xlsx  wifi_pic.rar
evaluation_figures/exp_eps/: 3_1_ber_distance_ble.eps  3_2_throughput_distance_ble_continuous.eps  3_2_throughput_distance_wifi_continuous.eps  3_3_throughput_distance_ble_transparent.eps  5_1_ber_power.eps
excel/: CTC.xlsx  GMSK-BER.xlsx  GMSK_ber.xlsx  warp.xlsx  wifi_real.xlsx
(+79 files in other folders)
